# wagtail-test-20231115

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  testmanage.py  tox.ini
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: test.yml
wagtail_test_20231115/: __init__.py  apps.py  wagtail_hooks.py
wagtail_test_20231115/test/: __init__.py  apps.py  settings.py
