[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-test-20231115"
authors = [{name = "Fred Bloggs", email = "fred@example.com"}]
description = "A one line description of your package."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "Django>=3.2",
    "Wagtail>=4.1,<6.0"
]
[project.optional-dependencies]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit==3.4.0"
]
ci = [
    "tox==4.11.3",
    "tox-gh-actions==3.1.3"
]

[project.urls]
Home = "https://github.com/chris48s/wagtail-test-20231115"

[tool.flit.module]
name = "wagtail_test_20231115"

[tool.flit.sdist]
exclude = [
    "wagtail_test_20231115/static_src",
    "wagtail_test_20231115/test",
    "wagtail_test_20231115/static/wagtail_test_20231115/js/.gitignore",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
